--- a/IDE_Slap.ui
+++ b/IDE_Slap.ui
@@ -1,29 +1,23 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>IDE_SlapClass</class>
- <widget class="QMainWindow" name="IDE_SlapClass" >
-  <property name="objectName" >
-   <string notr="true">IDE_SlapClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QMainWindow" name="IDE_SlapClass">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>600</width>
-	<height>400</height>
+    <x>0</x>
+    <y>0</y>
+    <width>600</width>
+    <height>400</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>IDE_Slap</string>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <widget class="QWidget" name="centralWidget"/>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="IDE_Slap.qrc"/>
+  <include location="IDE_Slap.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
